@@ -1,6 +1,8 @@
 piaware-mutability (1.20-1mu-1) UNRELEASED; urgency=medium
 
   * Merge changes from upstream 1.20-1
+  * Always log to stdout, never to /tmp, to reduce confusion when migrating
+    from FlightAware piaware.
 
  -- Oliver Jowett <oliver@mutability.co.uk>  Fri, 06 Feb 2015 18:10:01 +0000
 
